Fix card stucking in mobile

--- a/block/card/card.view.css
+++ b/block/card/card.view.css
@@ -38,6 +38,7 @@
 }
 
 [apxu_samosbor_map_block_card_content] {
+	touch-action: none;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -332,7 +333,8 @@
 }
 
 
-[apxu_samosbor_map_block_card_number_input], [apxu_samosbor_map_block_card_floor_input] {
+[apxu_samosbor_map_block_card_number_input],
+[apxu_samosbor_map_block_card_floor_input] {
 	width: 4ch;
 	padding: unset;
 }
